Refactor class Corpus.